07/07/20 - Intégration des cartes Google Maps avec une image dans chaque "card", un nouvel icône de globe dans l'onglet, changement du titre de l'onglet

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Voyages</title>
+  <title>Voyages autour du monde</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
